@@ -14,7 +14,7 @@
 	<groupId>ro.dragomiralin</groupId>
 	<artifactId>ecommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>E-Commerce API</name>
+	<name>ecommerce</name>
 	<description>Another E-Commerce Application</description>
 	<properties>
 		<java.version>17</java.version>
@@ -24,7 +24,11 @@
 
 	<modules>
 		<module>boot</module>
+		<module>domain</module>
+		<module>repository</module>
+		<module>web</module>
 	</modules>
+
 	<dependencies>
 
 	</dependencies>
@@ -32,15 +36,21 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<source>17</source>
+					<target>17</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>@{argLine} --enable-preview</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
